--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/layout.css" />
 
   <!-- External Google Fonts Bungee/Source Sans Pro-->
   <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,400,400i,700&display=swap"
