Add layout for task element

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/task.css" type="text/css" />
 
   <!-- External JS -->
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -91,6 +92,25 @@
 
   <main>
     <h1>My Tasks</h1>
+    <section class="task-list">
+      <!-- <script src="scripts/task_element.js"></script> -->
+      <article class="container-fluid">
+        <div class="row">
+          <i class="fas fa-film col col-1"></i>
+          <h3 class="task-name col col-8">task name</h3>
+          <i class="far fa-flag col col-1"></i>
+          <i class="fas fa-edit col col-1"></i>
+          <i class="fas fa-trash col col-1"></i>
+        </div>
+        <div class="row">
+          <div class="col col-1"></div>
+          <p class="created-at col col-8">time</p>
+          <div class="col col-1"></div>
+          <div class="col col-1"></div>
+          <div class="col col-1"></div>
+        </div>
+      </article>
+    </section>
 
   </main>
 
