Add task programmatically

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/styles/task.css" type="text/css" />
 
   <!-- External JS -->
-  <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/afa696a2f8.js" crossorigin="anonymous"></script>
@@ -93,8 +93,8 @@
   <main>
     <h1>My Tasks</h1>
     <section class="task-list">
-      <!-- <script src="scripts/task_element.js"></script> -->
-      <article class="container-fluid">
+      <script src="scripts/task_element.js"></script>
+      <!-- <article class="task container-fluid">
         <div class="row">
           <i class="fas fa-film col col-1"></i>
           <h3 class="task-name col col-8">task name</h3>
@@ -109,7 +109,7 @@
           <div class="col col-1"></div>
           <div class="col col-1"></div>
         </div>
-      </article>
+      </article> -->
     </section>
 
   </main>
