--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
   </nav>
   <main>
     <h1>My Tasks</h1>
+    <!-- Task List -->
     <section class="task-list">
       <script src="scripts/task_element.js"></script>
     </section>
