enter data from task into modal

--- a/public/index.html
+++ b/public/index.html
@@ -103,12 +103,12 @@
     </section>
 
     <section>
-      <button type="button" id="newTask" class="btn btn-primary close" data-toggle="modal" data-target="#exampleModal">
+      <button type="button" id="newTask" class="btn btn-primary close" data-toggle="modal" data-target="#myModal">
         <i class="fas fa-plus fa-2x"></i>
       </button>
 
       <!-- Modal -->
-      <div class="modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      <div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -121,24 +121,24 @@
             <div class="modal-body">
               <form>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="Checkbox">
+                  <input type="checkbox" class="form-check-input" id="checkbox">
                   <label class="form-check-label" for="Completed">&nbsp;&nbsp;Completed</label>
                 </div>
                 <div class="form-group">
                   <label for="Title">Title</label>
-                  <input type="text" class="form-control" id="Title" placeholder="Title">
+                  <input type="text" class="form-control" id="title" placeholder="Title">
                 </div>
                 <div class="form-group">
                   <label for="Category">Category</label>
-                  <select class="form-control" id="Category">
+                  <select class="form-control" id="category">
                     <option>Product</option>
                     <option>Movie</option>
                     <option>Restaurant</option>
                     <option>Book</option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Date</label>
+                <!-- <div class="form-group">
+                  <label for="exampleFormControlSelect1">date</label>
                   <div class="input-group date" data-provide="datepicker">
                     <input type="text" class="datepicker form-control">
                     <div class="input-group-addon">
@@ -147,13 +147,13 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">Priority</label>
+                  <label for="exampleFormControlSelect1">priority</label>
                   <select class="form-control" id="exampleFormControlSelect1">
                     <option>3</option>
                     <option>2</option>
                     <option>1</option>
                   </select>
-                </div>
+                </div> -->
               </form>
             </div>
             <div class="modal-footer">
