--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,8 @@
             <div class="modal-body">
               <form>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="checkbox">
-                  <label class="form-check-label" for="Completed">&nbsp;&nbsp;Completed</label>
+                  <input type="checkbox" class="form-check-input" value="check-completed" id="checkbox">
+                  <label class="form-check-label" for="Completed">Completed</label>
                 </div>
                 <div class="form-group">
                   <label for="Title">Title</label>
@@ -131,10 +131,10 @@
                 <div class="form-group">
                   <label for="Category">Category</label>
                   <select class="form-control" id="category">
-                    <option>Product</option>
-                    <option>Movie</option>
-                    <option>Restaurant</option>
-                    <option>Book</option>
+                    <option>buy</option>
+                    <option>watch</option>
+                    <option>eat</option>
+                    <option>read</option>
                   </select>
                 </div>
                 <!-- <div class="form-group">
