--- a/public/index.html
+++ b/public/index.html
@@ -113,22 +113,24 @@
             <div class="modal-body">
               <form>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" value="check-completed" id="checkbox">
+                  <input type="checkbox" class="form-check-input" value="check-completed" id="checkbox" name="completed">
                   <label class="form-check-label" for="Completed">Completed</label>
                 </div>
                 <div class="form-group">
                   <label for="Title">Title</label>
-                  <input type="text" class="form-control" id="title" placeholder="Title">
+                  <input type="text" class="form-control" id="title" placeholder="Title" name="task_name">
                 </div>
                 <div class="form-group">
                   <label for="Category">Category</label>
                   <select class="form-control" id="category">
+                    <option></option>
                     <option>buy</option>
                     <option>watch</option>
                     <option>eat</option>
                     <option>read</option>
                   </select>
                 </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
                 <!-- <div class="form-group">
                   <label for="exampleFormControlSelect1">date</label>
                   <div class="input-group date" data-provide="datepicker">
@@ -149,7 +151,6 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Submit</button>
             </div>
           </div>
         </div>
