--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,8 @@
             <div class="modal-body">
               <form>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" value="check-completed" id="checkbox" name="completed">
+                  <input type="checkbox" class="form-check-input" value="check-completed" id="checkbox"
+                    name="completed">
                   <label class="form-check-label" for="Completed">Completed</label>
                 </div>
                 <div class="form-group">
