Start new branch for doing the sort

--- a/public/index.html
+++ b/public/index.html
@@ -49,27 +49,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a id="sort-all" class="nav-link active" href="#">
             <i class="far fa-check-circle"></i>All <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a id="sort-watch" class="nav-link active" href="#">
             <i class="fas fa-film"></i>Watch
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#" aria-haspopup="true" aria-expanded="false">
+          <a id="sort-eat" class="nav-link active" href="#" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-utensils"></i>Eat
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a id="sort-read" class="nav-link active" href="#">
             <i class="fas fa-book-open"></i>Read
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a id="sort-buy" class="nav-link active" href="#">
             <i class="fas fa-cart-arrow-down"></i>Buy
           </a>
         </li>
@@ -79,7 +79,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-tem active">
-          <a class="nav-link small-font" href="#">Completed</a>
+          <a id="sort-completed" class="nav-link small-font" href="#">Completed</a>
         </li>
         <li class="nav-tem active">
           <a class="nav-link small-font" href="#">Logout</a>
