--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
   <!-- App JS -->
-  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script DEFER type="text/javascript" src="/scripts/apply_sort.js"></script>
+
 </head>
 
 <body>
