added more desktop navbar styling

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="#">
       <img src="https://raw.githubusercontent.com/fgfl/Smart-TODO-List/master/planning/mockups/smart-todo-logo.png" />
+      <span>Smart To Do</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
