--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/task.css" type="text/css" />
   <link rel="stylesheet" href="/styles/modal.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/task_list.css" type="text/css" />
 
   <!-- External JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
