added priority back to modal fields

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,6 @@
                     <option>read</option>
                   </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
                 <!-- <div class="form-group">
                   <label for="exampleFormControlSelect1">date</label>
                   <div class="input-group date" data-provide="datepicker">
@@ -142,15 +141,16 @@
                       <span class="glyphicon glyphicon-th"></span>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">priority</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
+                  <label for="exampleFormControlSelect1">Priority</label>
+                  <select class="form-control" id="priority">
                     <option>3</option>
                     <option>2</option>
                     <option>1</option>
                   </select>
-                </div> -->
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
               </form>
             </div>
           </div>
