css styling to priority color and js ordering tasks by priority:

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 <body>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="https://raw.githubusercontent.com/fgfl/Smart-TODO-List/master/planning/mockups/smart-todo-logo.png" />
       <span>Smart To Do</span>
     </a>
@@ -148,6 +148,7 @@
                     <option>3</option>
                     <option>2</option>
                     <option>1</option>
+                    <option>0</option>
                   </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
