Allow sending schedule date to SQL
- fixed priority update failing

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
                     <option>read</option>
                   </select>
                 </div>
-                <!-- <div class="form-group">
+                <div class="form-group">
                   <label for="exampleFormControlSelect1">date</label>
                   <div class="input-group date" data-provide="datepicker">
                     <input type="text" class="datepicker form-control">
@@ -141,7 +141,7 @@
                       <span class="glyphicon glyphicon-th"></span>
                     </div>
                   </div>
-                </div> -->
+                </div>
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Priority</label>
                   <select class="form-control" id="priority">
