added background image styles

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,7 @@
 
 </head>
 
-<body>
-
+<body class="movie-background">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/">
       <img src="https://raw.githubusercontent.com/fgfl/Smart-TODO-List/master/planning/mockups/smart-todo-logo.png" />
@@ -159,7 +158,6 @@
       </div>
     </section>
   </main>
-
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/afa696a2f8.js" crossorigin="anonymous"></script>
 
