--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body class="movie-background">
+<body class="all-background">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="/">
       <img src="https://raw.githubusercontent.com/fgfl/Smart-TODO-List/master/planning/mockups/smart-todo-logo.png" />
