--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">date</label>
+                  <label for="exampleFormControlSelect1">Date</label>
                   <div class="input-group date" data-provide="datepicker">
                     <input type="text" class="datepicker form-control">
                     <div class="input-group-addon">
@@ -150,7 +150,7 @@
                     <option>0</option>
                   </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-lg btn-primary">Submit</button>
               </form>
             </div>
           </div>
