--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
   <!-- App JS -->
   <script DEFER type="text/javascript" src="/scripts/apply_sort.js"></script>
+  <script DEFER type="text/javascript" src="/scripts/login.js"></script>
 
 </head>
 
@@ -84,7 +85,7 @@
           <a id="sort-completed" class="nav-link small-font" href="#">Completed</a>
         </li>
         <li class="nav-tem active">
-          <a class="nav-link small-font" href="#">Logout</a>
+          <a id="logout-link" class="nav-link small-font" href="#">Logout</a>
         </li>
       </ul>
     </div>
